--- a/index.html
+++ b/index.html
@@ -241,6 +241,71 @@
                 transform: translateX(100%);
             }
         }
+
+        .modal-nav-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 3900;
+            width: 80px;
+            height: 80px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            color: white;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            cursor: pointer;
+            gap: 4px;
+        }
+
+        .modal-nav-btn:hover:not(:disabled) {
+            background: rgba(255, 255, 255, 0.25);
+            transform: translateY(-50%) scale(1.1);
+            border-color: rgba(255, 255, 255, 0.5);
+            box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .modal-nav-btn:active:not(:disabled) {
+            transform: translateY(-50%) scale(0.95);
+        }
+
+        .modal-nav-btn:disabled {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .modal-nav-btn.left {
+            left: 20px;
+        }
+
+        .modal-nav-btn.right {
+            right: 20px;
+        }
+
+        @media (max-width: 1024px) {
+            .modal-nav-btn {
+                width: 60px;
+                height: 60px;
+                background: rgba(255, 255, 255, 0.8);
+                color: #475569;
+                /* slate-600 */
+                border-color: #e2e8f0;
+                /* slate-200 */
+            }
+
+            .modal-nav-btn.left {
+                left: 10px;
+            }
+
+            .modal-nav-btn.right {
+                right: 10px;
+            }
+        }
     </style>
 </head>
 
@@ -340,10 +405,22 @@
     <div id="dictModal"
         class="fixed inset-0 bg-black/60 backdrop-blur-sm z-[3800] hidden flex items-center justify-center p-4 transition-opacity duration-300 opacity-0"
         onclick="if(event.target===this) app.closeDictModal()">
-        <div class="bg-white rounded-3xl w-full max-w-2xl shadow-2xl flex flex-col max-h-[90vh] transform transition-all scale-95 opacity-0"
+
+        <!-- External Navigation Buttons -->
+        <button id="dictPrevBtnIdx" class="modal-nav-btn left" title="前の問題 (←)">
+            <i class="ph ph-caret-left-bold text-2xl"></i>
+            <span class="text-[10px] font-bold uppercase tracking-widest hidden md:block">Prev</span>
+        </button>
+
+        <div class="bg-white rounded-3xl w-full max-w-2xl shadow-2xl flex flex-col max-h-[90vh] transform transition-all scale-95 opacity-0 relative overflow-hidden"
             id="dictModalContent">
             <!-- Content Injected Here -->
         </div>
+
+        <button id="dictNextBtnIdx" class="modal-nav-btn right" title="次の問題 (→)">
+            <i class="ph ph-caret-right-bold text-2xl"></i>
+            <span class="text-[10px] font-bold uppercase tracking-widest hidden md:block">Next</span>
+        </button>
     </div>
 
     <div id="customToast"
@@ -390,6 +467,7 @@
                 quizFilter: 'all',
                 excludeClear: false,
                 dictViewMode: 'list',
+                currentDictIds: [],
                 mode: 'normal',
                 fromScreen: 'home',
                 mockAnswers: {},
@@ -1638,6 +1716,7 @@
 
                 // Check if all filters are default
                 const isDefaultFilter = (!unit || unit === '') && level === 'ALL' && status === 'ALL' && (!search || search.trim() === '');
+                app.state.currentDictIds = list.map(q => q.id);
                 let contentHtml = '';
 
                 if (isDefaultFilter) {
@@ -1757,11 +1836,16 @@
                 app.state.chartInstance = new Chart(ctx, { type: 'radar', data: { labels: ['A.化学基礎', 'B.状態', 'C.反応', 'D.無機', 'E.有機', 'F.高分子'], datasets: [{ label: '攻略率 (%)', data: unitStats, backgroundColor: 'rgba(99, 102, 241, 0.2)', borderColor: 'rgba(99, 102, 241, 1)', borderWidth: 2, pointBackgroundColor: 'rgba(99, 102, 241, 1)' }] }, options: { responsive: true, maintainAspectRatio: false, scales: { r: { min: 0, max: 100, ticks: { stepSize: 20, display: false } } }, plugins: { legend: { display: false } } } });
             },
             findQuestion: (id) => window.questionPool.find(q => q.id === id),
-            openDictModal: (id) => {
+            openDictModal: (id, showAnswer = false) => {
                 const q = app.findQuestion(id);
                 if (!q) return;
                 const h = app.state.history[q.id] || { correct: 0, wrong: 0, streak: 0 };
                 const streak = h.streak || 0;
+
+                // Indexing for navigation
+                const idx = app.state.currentDictIds.indexOf(id);
+                const prevId = idx > 0 ? app.state.currentDictIds[idx - 1] : null;
+                const nextId = idx < app.state.currentDictIds.length - 1 ? app.state.currentDictIds[idx + 1] : null;
 
                 let badges = '';
                 if (streak >= 3) badges += `<span class="bg-emerald-100 text-emerald-700 px-2 py-0.5 rounded ml-2 text-xs font-bold">CLEAR 🏆</span>`;
@@ -1780,16 +1864,18 @@
 
                 const html = `
                     <div class="p-6 bg-slate-50 border-b border-slate-100 flex justify-between items-start rounded-t-3xl">
-                        <div>
-                            <div class="flex items-center gap-2 flex-wrap mb-2">
-                                <span class="text-xs font-bold px-2 py-1 rounded ${app.getUnitColor(q.unit)}">${app.unitMap[q.unit]}</span>
-                                <span class="text-xs font-bold px-2 py-1 rounded ${app.getLevelColor(q.level)}">${app.levelMap[q.level]}</span>
-                                <span class="text-xs font-bold text-slate-400 font-mono">ID: ${q.id}</span>
-                                ${badges}
+                        <div class="flex items-center gap-4">
+                            <div class="flex flex-col">
+                                <div class="flex items-center gap-2 flex-wrap mb-1">
+                                    <span class="text-xs font-bold px-2 py-1 rounded ${app.getUnitColor(q.unit)}">${app.unitMap[q.unit]}</span>
+                                    <span class="text-xs font-bold px-2 py-1 rounded ${app.getLevelColor(q.level)}">${app.levelMap[q.level]}</span>
+                                    <span class="text-xs font-bold text-slate-400 font-mono">ID: ${q.id}</span>
+                                    ${badges}
+                                </div>
+                                <div class="text-sm text-slate-500 font-mono font-bold">正解: ${h.correct || 0}回 / 不正解: ${h.wrong || 0}回 / 連勝: ${streak > 0 ? streak : 0}</div>
                             </div>
-                            <div class="text-sm text-slate-500 font-mono font-bold">正解: ${h.correct || 0}回 / 不正解: ${h.wrong || 0}回 / 連勝: ${streak > 0 ? streak : 0}</div>
                         </div>
-                        <button onclick="app.closeDictModal()" class="text-slate-400 hover:text-rose-500 text-2xl transition-colors"><i class="ph ph-x-circle"></i></button>
+                        <button onclick="app.closeDictModal()" class="text-slate-300 hover:text-rose-500 text-3xl transition-colors active:scale-90"><i class="ph ph-x-circle"></i></button>
                     </div>
                     <div class="p-6 overflow-y-auto custom-scrollbar flex-grow">
                         <div class="mb-6">
@@ -1798,8 +1884,10 @@
                             ${choicesHtml}
                         </div>
                         <div class="mt-4">
-                            <button onclick="document.getElementById('dictExp').classList.remove('hidden'); this.classList.add('hidden')" class="w-full py-3 bg-slate-100 text-slate-600 rounded-xl font-bold hover:bg-slate-200 transition-colors flex items-center justify-center gap-2 text-sm"><i class="ph ph-eye"></i> 正解・解説を表示</button>
-                            <div id="dictExp" class="bg-indigo-50 p-5 rounded-2xl border border-indigo-100 hidden animate-fade-in">
+                            <button id="toggleAnsBtn" onclick="app.toggleDictAnswer()" class="w-full py-3 ${showAnswer ? 'bg-indigo-600 text-white' : 'bg-slate-100 text-slate-600'} rounded-xl font-bold hover:shadow-lg transition-all flex items-center justify-center gap-2 text-sm">
+                                <i class="${showAnswer ? 'ph ph-eye-slash' : 'ph ph-eye'}"></i> ${showAnswer ? '正解・解説を隠す' : '正解・解説を表示'}
+                            </button>
+                            <div id="dictExp" class="bg-indigo-50 p-5 rounded-2xl border border-indigo-100 mt-4 ${showAnswer ? 'animate-fade-in' : 'hidden'}">
                                 <h4 class="font-bold text-indigo-400 text-xs mb-2 uppercase tracking-wider">正解・解説</h4>
                                 <div class="mb-3">
                                     <span class="font-bold text-slate-500 text-sm">正解:</span>
@@ -1811,15 +1899,77 @@
                     </div>
                 `;
                 document.getElementById('dictModalContent').innerHTML = html;
+
+                // Update External Navigation Buttons
+                const pBtn = document.getElementById('dictPrevBtnIdx');
+                const nBtn = document.getElementById('dictNextBtnIdx');
+                if (pBtn) {
+                    pBtn.disabled = !prevId;
+                    pBtn.onclick = () => app.openDictModal(prevId);
+                }
+                if (nBtn) {
+                    nBtn.disabled = !nextId;
+                    nBtn.onclick = () => app.openDictModal(nextId);
+                }
+
+                app.state.currentDictId = id; // Store for key events
                 document.getElementById('dictModal').classList.remove('hidden');
                 requestAnimationFrame(() => {
                     document.getElementById('dictModal').classList.remove('opacity-0');
                     document.getElementById('dictModalContent').classList.remove('scale-95', 'opacity-0');
                     document.getElementById('dictModalContent').classList.add('scale-100', 'opacity-100');
                 });
+
+                // Add temporary listener
+                if (!app._dictKeyListener) {
+                    app._dictKeyListener = (e) => {
+                        if (document.getElementById('dictModal').classList.contains('hidden')) return;
+                        if (e.key === 'ArrowRight' || e.key === 'ArrowLeft') {
+                            const currentIdx = app.state.currentDictIds.indexOf(app.state.currentDictId);
+                            if (e.key === 'ArrowRight' && currentIdx < app.state.currentDictIds.length - 1) {
+                                app.openDictModal(app.state.currentDictIds[currentIdx + 1]);
+                            } else if (e.key === 'ArrowLeft' && currentIdx > 0) {
+                                app.openDictModal(app.state.currentDictIds[currentIdx - 1]);
+                            }
+                        } else if (e.key === 'Enter') {
+                            app.toggleDictAnswer();
+                        } else if (e.key === 'Escape') {
+                            app.closeDictModal();
+                        }
+                    };
+                    window.addEventListener('keydown', app._dictKeyListener);
+                }
+
                 if (window.MathJax) MathJax.typesetPromise();
             },
-            closeDictModal: () => { const m = document.getElementById('dictModal'); m.classList.add('opacity-0'); document.getElementById('dictModalContent').classList.remove('scale-100', 'opacity-100'); document.getElementById('dictModalContent').classList.add('scale-95', 'opacity-0'); setTimeout(() => { m.classList.add('hidden'); document.getElementById('dictModalContent').innerHTML = ''; }, 300); },
+            toggleDictAnswer: () => {
+                const exp = document.getElementById('dictExp');
+                const btn = document.getElementById('toggleAnsBtn');
+                if (!exp || !btn) return;
+                if (exp.classList.contains('hidden')) {
+                    exp.classList.remove('hidden');
+                    exp.classList.add('animate-fade-in');
+                    btn.innerHTML = '<i class="ph ph-eye-slash"></i> 正解・解説を隠す';
+                    btn.classList.replace('bg-slate-100', 'bg-indigo-600');
+                    btn.classList.replace('text-slate-600', 'text-white');
+                } else {
+                    exp.classList.add('hidden');
+                    btn.innerHTML = '<i class="ph ph-eye"></i> 正解・解説を表示';
+                    btn.classList.replace('bg-indigo-600', 'bg-slate-100');
+                    btn.classList.replace('text-white', 'text-slate-600');
+                }
+            },
+            closeDictModal: () => {
+                const m = document.getElementById('dictModal');
+                const mc = document.getElementById('dictModalContent');
+                if (app._dictKeyListener) {
+                    window.removeEventListener('keydown', app._dictKeyListener);
+                    app._dictKeyListener = null;
+                }
+                m.classList.add('opacity-0');
+                mc.classList.add('scale-95', 'opacity-0');
+                setTimeout(() => { m.classList.add('hidden'); mc.innerHTML = ''; }, 300);
+            },
 
             startReviewSetup: () => { if (app.state.mistakes.length === 0) { app.showAlert("現在、間違いリストは空です。"); return; } const reviewQuestions = window.questionPool.filter(q => app.state.mistakes.includes(q.id)); if (reviewQuestions.length === 0) { app.showAlert("復習対象の問題データが見つかりませんでした。リストをクリアします。"); app.state.mistakes = []; localStorage.setItem('chemMaster_mistakes', JSON.stringify([])); app.renderMyPage(); return; } const shuffled = reviewQuestions.map(q => app.generateQuizQuestion(q)).sort(() => 0.5 - Math.random()); app.runQuiz(shuffled, 'review'); },
 
