--- a/index.html
+++ b/index.html
@@ -333,31 +333,41 @@
             pointer-events: none;
         }
 
-        .modal-nav-btn.left {
-            left: 20px;
-        }
-
         .modal-nav-btn.right {
             right: 20px;
         }
 
         @media (max-width: 1024px) {
             .modal-nav-btn {
-                width: 60px;
-                height: 60px;
-                background: rgba(255, 255, 255, 0.8);
+                width: 50px;
+                height: 50px;
+                background: rgba(255, 255, 255, 0.9);
                 color: #475569;
-                /* slate-600 */
                 border-color: #e2e8f0;
-                /* slate-200 */
+                top: auto;
+                bottom: 80px;
+                /* 解答ボタンなどと重ならない位置に移動 */
+                transform: none;
+            }
+
+            .modal-nav-btn:hover:not(:disabled) {
+                transform: scale(1.1);
+            }
+
+            .modal-nav-btn i {
+                font-size: 1.25rem !important;
+            }
+
+            .modal-nav-btn span {
+                display: none;
             }
 
             .modal-nav-btn.left {
-                left: 10px;
+                left: 20px;
             }
 
             .modal-nav-btn.right {
-                right: 10px;
+                right: 20px;
             }
         }
     </style>
@@ -369,7 +379,7 @@
 
         <!-- Header (Home Only) -->
         <header id="mainHeader"
-            class="flex justify-between items-center mb-4 glass-header px-4 py-2 rounded-b-xl md:rounded-2xl sticky top-2 z-40 transition-transform duration-300 mx-2 md:mx-auto max-w-6xl w-full">
+            class="flex justify-between items-center mb-4 glass-header px-4 py-2 rounded-b-xl md:rounded-2xl sticky top-2 z-40 transition-transform duration-300 mx-auto w-[calc(100%-1rem)] max-w-6xl">
             <div class="flex items-center gap-3 cursor-pointer group" onclick="app.goHome()">
                 <div
                     class="bg-gradient-to-br from-indigo-500 to-purple-600 text-white p-2 rounded-lg shadow-md shadow-indigo-200 group-hover:shadow-indigo-300 transition-all duration-300">
@@ -1147,7 +1157,29 @@
 
                 let filtered = [];
                 if (level === 4) {
-                    filtered = base.sort(() => 0.5 - Math.random()).slice(0, 10);
+                    // --- Test Format (Exam Mode): 10 questions ---
+                    // Rule: 1-5: Level 1, 6-8: Level 2, 9-10: Level 3
+                    // If insufficient, supplement from other levels and sort by level.
+                    const l1 = base.filter(q => q.level === 1).sort(() => 0.5 - Math.random());
+                    const l2 = base.filter(q => q.level === 2).sort(() => 0.5 - Math.random());
+                    const l3 = base.filter(q => q.level === 3).sort(() => 0.5 - Math.random());
+                    const others = base.filter(q => q.level !== 1 && q.level !== 2 && q.level !== 3).sort(() => 0.5 - Math.random());
+
+                    const selected = [];
+                    // Initial take
+                    selected.push(...l1.splice(0, 5));
+                    selected.push(...l2.splice(0, 3));
+                    selected.push(...l3.splice(0, 2));
+
+                    // Supplement if total is less than 10
+                    if (selected.length < 10) {
+                        const remaining = [...l1, ...l2, ...l3, ...others].sort(() => 0.5 - Math.random());
+                        selected.push(...remaining.slice(0, 10 - selected.length));
+                    }
+
+                    // Ensure the final list is sorted by level (Level 1 -> 2 -> 3)
+                    selected.sort((a, b) => a.level - b.level);
+                    filtered = selected;
                 } else {
                     let levelMatch = base.filter(q => q.level === level);
                     const counts = { 1: 5, 2: 3, 3: 1 };
@@ -1188,8 +1220,8 @@
 
                 const c = document.getElementById('mainContainer');
                 c.className = 'w-full h-full p-0 m-0';
-                c.style.width = '100vw';
-                c.style.height = '100vh';
+                c.style.width = '100%';
+                c.style.height = '100.1vh';
                 c.style.overflow = 'hidden';
 
                 c.innerHTML = `
@@ -1211,7 +1243,7 @@
                 app.startTimer();
             },
 
-            getCardAlignmentClass: () => { return app.state.cardAlignment === 'left' ? 'justify-start pl-8 md:pl-20' : 'justify-center'; },
+            getCardAlignmentClass: () => { return app.state.cardAlignment === 'left' ? 'justify-start pl-2 md:pl-20' : 'justify-center'; },
 
             toggleCardAlignment: () => {
                 app.state.cardAlignment = app.state.cardAlignment === 'center' ? 'left' : 'center';
@@ -1417,8 +1449,8 @@
 
                 const c = document.getElementById('mainContainer');
                 c.className = 'w-full h-full p-0 m-0';
-                c.style.width = '100vw';
-                c.style.height = '100vh';
+                c.style.width = '100%';
+                c.style.height = '100.1vh';
                 c.style.overflow = 'hidden';
 
                 app.renderExam();
@@ -1524,7 +1556,7 @@
                     <div class="relative w-full h-full flex flex-col">
                         ${app.getToolbarHTML()}
                         <div id="examScrollContainer" class="flex-grow overflow-y-auto bg-slate-200/50 block w-full h-full pt-20 custom-scrollbar">
-                            <div id="examPaper" class="mx-auto w-full max-w-4xl p-4 md:p-16 origin-top my-4 bg-white relative z-1">
+                            <div id="examPaper" class="mx-auto w-full max-w-6xl p-4 md:p-16 origin-top my-4 bg-white relative z-1">
                                 <div id="questionsLayer" class="relative z-0">
                                     <div class="text-center mb-8 md:mb-12 border-b-2 border-slate-800 pb-4 md:pb-6"><h2 class="text-2xl md:text-3xl font-bold font-serif mb-2 text-slate-900">化学 演習問題</h2><p class="text-xs md:text-sm text-slate-500 font-serif">注意事項：解答は右下の「解答用紙ボタン」から入力してください。</p></div>
                                     ${questionsHtml}
@@ -1855,50 +1887,50 @@
 
                 let html = `
                     <div class="animate-fade-in w-full pb-12 container mx-auto px-4 max-w-7xl">
-                        <div class="sticky top-4 z-30 bg-white/90 backdrop-blur-xl p-3 pr-4 rounded-3xl shadow-xl shadow-slate-200/50 border border-white/60 mb-6 transition-all duration-300">
-                            <div class="flex items-center justify-between gap-4">
+                        <div class="sticky top-4 z-30 bg-white/90 backdrop-blur-xl p-2 md:p-3 pr-4 rounded-2xl md:rounded-3xl shadow-xl shadow-slate-200/50 border border-white/60 mb-6 transition-all duration-300">
+                            <div class="flex flex-wrap md:flex-nowrap items-center justify-between gap-2 md:gap-4">
                                 <!-- Title & Stats -->
-                                <div class="flex items-center gap-3 flex-shrink-0">
+                                <div class="flex items-center gap-2 md:gap-3 flex-shrink-0">
                                     <button onclick="app.goMyPage()" class="text-slate-400 hover:text-indigo-600 transition-colors"><i class="ph ph-arrow-left text-xl"></i></button>
                                     <div class="flex flex-col">
-                                        <h2 class="text-lg font-bold text-slate-800 leading-none mb-1">問題図鑑</h2>
-                                        <span class="text-[10px] font-bold text-indigo-500 uppercase tracking-widest">${list.length} Questions</span>
+                                        <h2 class="text-base md:text-lg font-bold text-slate-800 leading-none mb-1">問題図鑑</h2>
+                                        <span class="text-[9px] md:text-[10px] font-bold text-indigo-500 uppercase tracking-widest">${list.length} Questions</span>
                                     </div>
                                 </div>
                                 
                                 <!-- Filters Group -->
-                                <div class="flex flex-wrap items-center gap-2 flex-grow justify-center">
-                                    <div class="relative min-w-[120px]">
-                                        <select onchange="app.state.dictFilter.unit = this.value; app.renderDictionary()" class="w-full appearance-none bg-slate-50 border border-slate-200 rounded-xl text-[11px] pl-3 pr-8 py-1.5 outline-none shadow-sm focus:border-indigo-500 focus:ring-4 focus:ring-indigo-500/10 hover:bg-white hover:border-indigo-300 transition-all cursor-pointer font-bold text-slate-700">
-                                            <option value="" ${unit === '' ? 'selected' : ''}>全単元</option>
+                                <div class="grid grid-cols-3 md:flex items-center gap-1.5 md:gap-2 flex-grow">
+                                    <div class="relative">
+                                        <select onchange="app.state.dictFilter.unit = this.value; app.renderDictionary()" class="w-full appearance-none bg-slate-50 border border-slate-200 rounded-lg md:rounded-xl text-[10px] md:text-[11px] pl-2 pr-6 md:pl-3 md:pr-8 py-1.5 outline-none shadow-sm focus:border-indigo-500 hover:bg-white transition-all cursor-pointer font-bold text-slate-700">
+                                            <option value="" ${unit === '' ? 'selected' : ''}>単元</option>
                                             ${['A', 'B', 'C', 'D', 'E', 'F'].map(u => `<option value="${u}" ${unit === u ? 'selected' : ''}>${app.unitMap[u]}</option>`).join('')}
                                         </select>
-                                        <div class="absolute right-2 top-1/2 -translate-y-1/2 pointer-events-none text-slate-400 text-xs"><i class="ph ph-caret-down"></i></div>
+                                        <div class="absolute right-1.5 top-1/2 -translate-y-1/2 pointer-events-none text-slate-400 text-[10px]"><i class="ph ph-caret-down"></i></div>
                                     </div>
 
-                                    <div class="relative min-w-[100px]">
-                                        <select onchange="app.state.dictFilter.level = this.value; app.renderDictionary()" class="w-full appearance-none bg-slate-50 border border-slate-200 rounded-xl text-[11px] pl-3 pr-8 py-1.5 outline-none shadow-sm focus:border-indigo-500 focus:ring-4 focus:ring-indigo-500/10 hover:bg-white hover:border-indigo-300 transition-all cursor-pointer font-bold text-slate-700">
-                                            ${['ALL', '1', '2', '3'].map(l => `<option value="${l}" ${level === l ? 'selected' : ''}>${l === 'ALL' ? '全レベル' : app.levelMap[l]}</option>`).join('')}
+                                    <div class="relative">
+                                        <select onchange="app.state.dictFilter.level = this.value; app.renderDictionary()" class="w-full appearance-none bg-slate-50 border border-slate-200 rounded-lg md:rounded-xl text-[10px] md:text-[11px] pl-2 pr-6 md:pl-3 md:pr-8 py-1.5 outline-none shadow-sm focus:border-indigo-500 hover:bg-white transition-all cursor-pointer font-bold text-slate-700">
+                                            ${['ALL', '1', '2', '3'].map(l => `<option value="${l}" ${level === l ? 'selected' : ''}>${l === 'ALL' ? '全Lv' : app.levelMap[l]}</option>`).join('')}
                                         </select>
-                                        <div class="absolute right-2 top-1/2 -translate-y-1/2 pointer-events-none text-slate-400 text-xs"><i class="ph ph-caret-down"></i></div>
+                                        <div class="absolute right-1.5 top-1/2 -translate-y-1/2 pointer-events-none text-slate-400 text-[10px]"><i class="ph ph-caret-down"></i></div>
                                     </div>
                                     
-                                    <div class="relative min-w-[120px]">
-                                        <select onchange="app.state.dictFilter.status = this.value; app.renderDictionary()" class="w-full appearance-none bg-slate-50 border border-slate-200 rounded-xl text-[11px] pl-3 pr-8 py-1.5 outline-none shadow-sm focus:border-indigo-500 focus:ring-4 focus:ring-indigo-500/10 hover:bg-white hover:border-indigo-300 transition-all cursor-pointer font-bold text-slate-700">
-                                            <option value="ALL">全ステータス</option>
-                                            <option value="CLEAR" ${status === 'CLEAR' ? 'selected' : ''}>クリア済み</option>
-                                            <option value="WINNING" ${status === 'WINNING' ? 'selected' : ''}>勝ち越し ⚖️</option>
-                                            <option value="REVENGE" ${status === 'REVENGE' ? 'selected' : ''}>リベンジ！</option>
+                                    <div class="relative">
+                                        <select onchange="app.state.dictFilter.status = this.value; app.renderDictionary()" class="w-full appearance-none bg-slate-50 border border-slate-200 rounded-lg md:rounded-xl text-[10px] md:text-[11px] pl-2 pr-6 md:pl-3 md:pr-8 py-1.5 outline-none shadow-sm focus:border-indigo-500 hover:bg-white transition-all cursor-pointer font-bold text-slate-700">
+                                            <option value="ALL">状態</option>
+                                            <option value="CLEAR" ${status === 'CLEAR' ? 'selected' : ''}>クリア</option>
+                                            <option value="WINNING" ${status === 'WINNING' ? 'selected' : ''}>勝ち越し</option>
+                                            <option value="REVENGE" ${status === 'REVENGE' ? 'selected' : ''}>リベンジ</option>
                                             <option value="UNANSWERED" ${status === 'UNANSWERED' ? 'selected' : ''}>未回答</option>
                                         </select>
-                                        <div class="absolute right-2 top-1/2 -translate-y-1/2 pointer-events-none text-slate-400 text-xs"><i class="ph ph-caret-down"></i></div>
+                                        <div class="absolute right-1.5 top-1/2 -translate-y-1/2 pointer-events-none text-slate-400 text-[10px]"><i class="ph ph-caret-down"></i></div>
                                     </div>
                                 </div>
 
                                 <!-- View Toggles -->
-                                <div class="flex bg-slate-100 p-1 rounded-xl flex-shrink-0">
-                                    <button onclick="app.state.dictViewMode='grid'; app.renderDictionary()" class="p-1.5 rounded-lg transition-all ${app.state.dictViewMode === 'grid' ? 'bg-white text-indigo-600 shadow-sm' : 'text-slate-400 hover:text-slate-600'}"><i class="ph ph-squares-four text-lg"></i></button>
-                                    <button onclick="app.state.dictViewMode='list'; app.renderDictionary()" class="p-1.5 rounded-lg transition-all ${app.state.dictViewMode === 'list' ? 'bg-white text-indigo-600 shadow-sm' : 'text-slate-400 hover:text-slate-600'}"><i class="ph ph-list-dashes text-lg"></i></button>
+                                <div class="flex bg-slate-100 p-0.5 md:p-1 rounded-lg md:rounded-xl flex-shrink-0">
+                                    <button onclick="app.state.dictViewMode='grid'; app.renderDictionary()" class="p-1 md:p-1.5 rounded-md md:rounded-lg transition-all ${app.state.dictViewMode === 'grid' ? 'bg-white text-indigo-600 shadow-sm' : 'text-slate-400 hover:text-slate-600'}"><i class="ph ph-squares-four text-base md:text-lg"></i></button>
+                                    <button onclick="app.state.dictViewMode='list'; app.renderDictionary()" class="p-1 md:p-1.5 rounded-md md:rounded-lg transition-all ${app.state.dictViewMode === 'list' ? 'bg-white text-indigo-600 shadow-sm' : 'text-slate-400 hover:text-slate-600'}"><i class="ph ph-list-dashes text-base md:text-lg"></i></button>
                                 </div>
                             </div>
                         </div>
